--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="imageGallery" href="https://hasinaakhter.github.io/agoodlifeguideUp" target="_blank">
+                    <a class="imageGallery" href="https://agoodlifeguideupdate.netlify.app/" target="_blank">
                         <img class="guide" src="images/img2.jpg" alt="project2">
                         <p>agoodlifeguide</p>
                     </a>
