--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio of Hasina Akhter</title>
+    <title>HA Development</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway" rel="stylesheet">
